[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["spa"] }
dotenv = "0.15.0"
rust-embed = { version = "6.4.2", features = ["include-exclude"]}
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
